Getting close to a decent point. Last things are to add create & print as well as creating X number of test samples

--- a/client/src/components/NavBar/styles.css
+++ b/client/src/components/NavBar/styles.css
@@ -1,3 +1,15 @@
+.nav-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
+
 .msd-image-container {
     align-items: flex-end;
     align-content: flex-end;
