--- a/client/src/components/SamplesTable/styles.css
+++ b/client/src/components/SamplesTable/styles.css
@@ -13,3 +13,19 @@
 .data-grid {
     flex: 1 1 auto;
 }
+
+.generated-label {
+    object-fit: cover;
+    border: 1px solid #ddd;
+    margin: auto;
+    margin-bottom: 10px;
+    width: 30%;
+    height: 30%;    
+}
+
+.generated-labels-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin: 10px;
+}
