Added prettier for consistent formatting. Switched from using react-scripts/create-react-app to vite (much faster development). Been working on UI improvements in general

--- a/client/src/components/CreateSampleForm/styles.css
+++ b/client/src/components/CreateSampleForm/styles.css
@@ -14,8 +14,8 @@
 }
 
 .sample-form-header-text {
-    color: inherit
-}   
+    color: inherit;
+}
 
 .sample-form-button-container {
     display: flex;
