--- a/client/src/components/LabelEditor/styles.css
+++ b/client/src/components/LabelEditor/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
+    margin-top: 10px;
     padding: 10px;
     width: 70vw;
 }
@@ -63,6 +64,16 @@
     padding: 0;
     width: 10ch;
     height: auto;
+}
+
+.label-selector-container {
+    width: 20vw;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+.label-options-footer {
+    margin-top: 10px;
 }
 
 /* .label-editor-text-input {
