Highlight expired samples

--- a/client/src/components/DeletedSamplesTable/styles.css
+++ b/client/src/components/DeletedSamplesTable/styles.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
     --data-grid-expired-color: rgb(59, 173, 166);
     --data-grid-expired-opacity: 0.8;
-}
+} */
 
 .data-grid-container {
     height: 75vh;
